--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <header class="w-full fixed top-0 left-0 right-0 flex items-center justify-center p-4 z-50">
             <div class="w-full max-w-7xl flex items-center justify-between">
                 <div class="flex items-center gap-3">
-                    <img src="/Users/darshanr/Downloads/Group Logo.png" alt="Left Logo 1" class="h-20 w-20 object-contain"/>
-                    <img src="/Users/darshanr/Downloads/College Logo 2.png" alt="Left Logo 2" class="h-20 w-20 object-contain hidden sm:flex"/>
+                    <img src="Group Logo.png" alt="Left Logo 1" class="h-20 w-20 object-contain"/>
+                    <img src="College Logo 2.png" alt="Left Logo 2" class="h-20 w-20 object-contain hidden sm:flex"/>
                 </div>
                 <nav class="header-nav hidden md:flex items-center p-2 space-x-2 rounded-full">
                     <button data-target="home" class="nav-button capitalize text-sm px-4 py-2 rounded-full transition-colors duration-300 bg-purple-600 text-white">Home</button>
@@ -138,8 +138,8 @@
                 </nav>
 
                 <div class="flex items-center gap-3">
-                    <img src="/Users/darshanr/Downloads/logo-masterbrand-tagline-white-transparent.webp" alt="Right Logo 1" class="h-16 w-16 object-contain hidden sm:flex"/>
-                    <img src="/Users/darshanr/Downloads/ieee_bangalore_section-removebg-preview.png" alt="Right Logo 2" class="h-20 w-20 object-contain"/>
+                    <img src="logo-masterbrand-tagline-white-transparent.webp" alt="Right Logo 1" class="h-16 w-16 object-contain hidden sm:flex"/>
+                    <img src="ieee_bangalore_section-removebg-preview.png" alt="Right Logo 2" class="h-20 w-20 object-contain"/>
                 </div>
                 </div>
         </header>
@@ -182,7 +182,7 @@
                     <button id="explore-events-btn" class="btn-secondary text-white font-bold py-3 px-8 rounded-full text-lg">
                         Explore Events
                     </button>
-                    <a href="/Users/darshanr/Downloads/DAY 1 EVENTS_20250917_182900_0000.pdf" target="_blank" rel="noopener noreferrer">
+                    <a href="DAY 1 EVENTS_20250917_182900_0000.pdf" target="_blank" rel="noopener noreferrer">
                         <button class="btn-secondary text-white font-bold py-3 px-8 rounded-full text-lg">
                            View Brochure
                         </button>
@@ -257,17 +257,17 @@
                     <h3 class="text-2xl font-bold mb-8 text-purple-400">Organizing Committee</h3>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="/Users/darshanr/Downloads/2KDcYHqn_400x400.jpg" alt="Organizing Committee Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-purple-500"/>
+                            <img src="2KDcYHqn_400x400.jpg" alt="Organizing Committee Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-purple-500"/>
                             <h4 class="text-xl font-bold"> Dr.Sai Prakash LeoMuthu</h4>
                             <p class="text-purple-400">Chairman & CEO <br> Sairam Institution</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="/Users/darshanr/Desktop/Screenshot 2025-09-19 at 11.25.18 AM.png" alt="Organizing Committee Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-purple-500"/>
+                            <img src="Screenshot 2025-09-19 at 11.25.18 AM.png" alt="Organizing Committee Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-purple-500"/>
                             <h4 class="text-xl font-bold">Dr. R. ArunKumar</h4>
                             <p class="text-purple-400">Chief Operating Officer <br> Sairam Institution</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="/Users/darshanr/Downloads/02.jpg" alt="Organizing Committee Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-purple-500"/>
+                            <img src="02.jpg" alt="Organizing Committee Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-purple-500"/>
                             <h4 class="text-xl font-bold">Dr. B. Shadaksharappa</h4>
                             <p class="text-purple-400">Principal SSCE</p>
                         </div>
@@ -279,7 +279,7 @@
                     <h3 class="text-2xl font-bold mb-8 text-blue-400">Branch Counsellor</h3>
                     <div class="flex justify-center">
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="/Users/darshanr/Downloads/ECE/ECE Teaching/A.Poonguzhali.jpg" alt="Branch Counsellor" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-500"/>
+                            <img src="A.Poonguzhali.jpg" alt="Branch Counsellor" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-500"/>
                             <h4 class="text-xl font-bold">Dr. A.Poonguzhali</h4>
                             <p class="text-blue-400">Branch Counselor</p>
                         </div>
@@ -291,12 +291,12 @@
                     <h3 class="text-2xl font-bold mb-8 text-green-400">Faculty Coordinators</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="/Users/darshanr/Downloads/ECE/ECE Teaching/Dr. P Narmatha.JPG" alt="Faculty Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-green-500"/>
+                            <img src="Dr. P Narmatha.JPG" alt="Faculty Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-green-500"/>
                             <h4 class="text-xl font-bold">Dr. P Narmatha</h4>
                             <p class="text-green-400">Associate Professor</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="/Users/darshanr/Downloads/WhatsApp Image 2025-09-19 at 11.34.39.jpeg" alt="Faculty Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-green-500"/>
+                            <img src="WhatsApp Image 2025-09-19 at 11.34.39.jpeg" alt="Faculty Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-green-500"/>
                             <h4 class="text-xl font-bold">Dr. Ramya.K</h4>
                             <p class="text-green-400"> Associate Professor</p>
                         </div>
@@ -335,14 +335,14 @@
                 <h2 class="text-4xl font-extrabold mb-12">Gallery</h2>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                     
-                    <div class="overflow-hidden rounded-2xl card"><img src="/Users/darshanr/Downloads/DSC_2415.JPG" alt="Event photo 1" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
-                    <div class="overflow-hidden rounded-2xl card"><img src="/Users/darshanr/Downloads/DSC_2423.JPG" alt="Event photo 2" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
-                    <div class="overflow-hidden rounded-2xl card"><img src="/Users/darshanr/Downloads/DSC_2478.JPG" alt="Event photo 3" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
-                    <div class="overflow-hidden rounded-2xl card"><img src="/Users/darshanr/Downloads/DSC_2499.JPG" alt="Event photo 4" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
-                    <div class="overflow-hidden rounded-2xl card"><img src="/Users/darshanr/Downloads/DSC_3062.JPG" alt="Event photo 5" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
-                    <div class="overflow-hidden rounded-2xl card"><img src="/Users/darshanr/Downloads/WhatsApp Image 2025-09-19 at 11.53.02.jpeg" alt="Event photo 6" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
-                    <div class="overflow-hidden rounded-2xl card"><img src="/Users/darshanr/Downloads/WhatsApp Image 2025-09-19 at 11.51.44.jpeg" alt="Event photo 7" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
-                    <div class="overflow-hidden rounded-2xl card"><img src="/Users/darshanr/Downloads/WhatsApp Image 2025-09-19 at 11.51.43.jpeg" alt="Event photo 8" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
+                    <div class="overflow-hidden rounded-2xl card"><img src="DSC_2415.JPG" alt="Event photo 1" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
+                    <div class="overflow-hidden rounded-2xl card"><img src="DSC_2423.JPG" alt="Event photo 2" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
+                    <div class="overflow-hidden rounded-2xl card"><img src="DSC_2478.JPG" alt="Event photo 3" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
+                    <div class="overflow-hidden rounded-2xl card"><img src="DSC_2499.JPG" alt="Event photo 4" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
+                    <div class="overflow-hidden rounded-2xl card"><img src="DSC_3062.JPG" alt="Event photo 5" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
+                    <div class="overflow-hidden rounded-2xl card"><img src="WhatsApp Image 2025-09-19 at 11.53.02.jpeg" alt="Event photo 6" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
+                    <div class="overflow-hidden rounded-2xl card"><img src="WhatsApp Image 2025-09-19 at 11.51.44.jpeg" alt="Event photo 7" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
+                    <div class="overflow-hidden rounded-2xl card"><img src="WhatsApp Image 2025-09-19 at 11.51.43.jpeg" alt="Event photo 8" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
                     
                 </div>
             </div>
