--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             <p class="text-purple-400">Chairman & CEO <br> Sairam Institution</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="Screenshot 2025-09-19 at 11.25.18 AM.png" alt="Organizing Committee Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-purple-500"/>
+                            <img src="1652440092957.jpeg" alt="Organizing Committee Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-purple-500"/>
                             <h4 class="text-xl font-bold">Dr. R. ArunKumar</h4>
                             <p class="text-purple-400">Chief Operating Officer <br> Sairam Institution</p>
                         </div>
