--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 <div class="flex items-center gap-3">
                     <img src="logo-masterbrand-tagline-white-transparent.webp" alt="Right Logo 1" class="h-16 w-16 object-contain hidden sm:flex"/>
                     <img src="ieee_bangalore_section-removebg-preview.png" alt="Right Logo 2" class="h-20 w-20 object-contain"/>
+                    <img src="ieee-day-logo-color-rgb.jpg" alt="Right Logo 2" class="h-20 w-20 object-contain"/>
                 </div>
                 </div>
         </header>
