--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="flex items-center gap-3">
                     <img src="logo-masterbrand-tagline-white-transparent.webp" alt="Right Logo 1" class="h-16 w-16 object-contain hidden sm:flex"/>
                     <img src="ieee_bangalore_section-removebg-preview.png" alt="Right Logo 2" class="h-20 w-20 object-contain"/>
-                    <img src="ieee-day-logo-color-rgb.jpg" alt="Right Logo 2" class="h-20 w-20 object-contain"/>
+                    <img src="ieee-day-logo-color-rgb.jpg" alt="Right Logo 2" class="h-20 w-20 object-cover rounded-full"/>
                 </div>
                 </div>
         </header>
@@ -154,7 +154,6 @@
                 <p class="text-xl sm:text-2xl text-gray-200 mt-2">A LIGHT OF BRILLIANCE</p>
                 <p class="text-lg sm:text-xl text-gray-300 mt-4">14th & 15th OCTOBER 2025</p>
                 
-                <!-- Countdown Timer -->
                 <div id="countdown" class="flex justify-center gap-2 sm:gap-4 md:gap-8 mt-8 text-white">
                     <div class="stat-card p-3 sm:p-4 rounded-xl sm:rounded-2xl text-center w-20 sm:w-24">
                         <span id="days" class="text-3xl sm:text-4xl font-bold">00</span>
@@ -185,7 +184,7 @@
                     </button>
                     <a href="DAY 1 EVENTS_20250917_182900_0000.pdf" target="_blank" rel="noopener noreferrer">
                         <button class="btn-secondary text-white font-bold py-3 px-8 rounded-full text-lg">
-                           View Brochure
+                            View Brochure
                         </button>
                     </a>
                     <a href="https://chat.whatsapp.com/BVkGFvv6dQuBUOLU1wPvNw" target="_blank" rel="noopener noreferrer">
@@ -253,7 +252,6 @@
             <div id="team" class="content-section hidden w-full max-w-6xl px-4 sm:px-6 z-10 text-center">
                 <h2 class="text-4xl font-extrabold mb-12">Meet The Team</h2>
                 
-                <!-- Organizing Committee Section -->
                 <div class="mb-16">
                     <h3 class="text-2xl font-bold mb-8 text-purple-400">Organizing Committee</h3>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -275,7 +273,6 @@
                     </div>
                 </div>
 
-                <!-- Branch Counsellor Section -->
                 <div class="mb-16">
                     <h3 class="text-2xl font-bold mb-8 text-blue-400">Branch Counsellor</h3>
                     <div class="flex justify-center">
@@ -287,7 +284,6 @@
                     </div>
                 </div>
 
-                <!-- Faculty Coordinators Section -->
                 <div class="mb-16">
                     <h3 class="text-2xl font-bold mb-8 text-green-400">Faculty Coordinators</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -304,7 +300,6 @@
                     </div>
                 </div>
 
-                <!-- Student Coordinators Section -->
                 <div class="mb-16">
                     <h3 class="text-2xl font-bold mb-8 text-pink-400">Student Coordinators</h3>
                     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
