--- a/index.html
+++ b/index.html
@@ -304,18 +304,18 @@
                     <h3 class="text-2xl font-bold mb-8 text-pink-400">Student Coordinators</h3>
                     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="https://placehold.co/150x150/1a1a2e/ffffff?text=SC1" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
+                            <img src="ponmudiii.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
                             <h4 class="text-xl font-bold">Ponmudi E</h4>
                             <p class="text-pink-400">Student Coordinator</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="https://placehold.co/150x150/1a1a2e/ffffff?text=SC2" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
-                            <h4 class="text-xl font-bold">Santhosh P</h4>
+                            <img src="sathiyaa.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
+                            <h4 class="text-xl font-bold">Sathiya S</h4>
                             <p class="text-pink-400">Student Coordinator</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
                             <img src="https://placehold.co/150x150/1a1a2e/ffffff?text=SC3" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
-                            <h4 class="text-xl font-bold">Sathiya S</h4>
+                            <h4 class="text-xl font-bold">Santhosh P</h4>
                             <p class="text-pink-400">Student Coordinator</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
