--- a/index.html
+++ b/index.html
@@ -304,12 +304,12 @@
                     <h3 class="text-2xl font-bold mb-8 text-pink-400">Student Coordinators</h3>
                     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="ponmudiii.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
+                            <img src="Ponmudiii.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
                             <h4 class="text-xl font-bold">Ponmudi E</h4>
                             <p class="text-pink-400">Student Coordinator</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="sathiyaa.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
+                            <img src="Sathiyaa.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
                             <h4 class="text-xl font-bold">Sathiya S</h4>
                             <p class="text-pink-400">Student Coordinator</p>
                         </div>
