--- a/index.html
+++ b/index.html
@@ -304,22 +304,22 @@
                     <h3 class="text-2xl font-bold mb-8 text-pink-400">Student Coordinators</h3>
                     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="Ponmudiii.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
+                            <img src="PONMUDIE.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
                             <h4 class="text-xl font-bold">Ponmudi E</h4>
                             <p class="text-pink-400">Student Coordinator</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="Sathiyaa.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
+                            <img src="Sathiyaaa.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
                             <h4 class="text-xl font-bold">Sathiya S</h4>
                             <p class="text-pink-400">Student Coordinator</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="https://placehold.co/150x150/1a1a2e/ffffff?text=SC3" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
+                            <img src="santhosh.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
                             <h4 class="text-xl font-bold">Santhosh P</h4>
                             <p class="text-pink-400">Student Coordinator</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
-                            <img src="https://placehold.co/150x150/1a1a2e/ffffff?text=SC4" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
+                            <img src="Monishaa.jpg" alt="Student Coordinator" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-pink-500"/>
                             <h4 class="text-xl font-bold">Monisha N</h4>
                             <p class="text-pink-400">Student Coordinator</p>
                         </div>
@@ -328,7 +328,8 @@
             </div>
             
             <div id="gallery" class="content-section hidden w-full max-w-7xl px-4 sm:px-6 z-10 text-center">
-                <h2 class="text-4xl font-extrabold mb-12">Gallery</h2>
+                <h2 class="text-4xl font-extrabold mb-12">Gallery</h2><br>
+                <h3 class="text-4xl font-extrabold mb-12">Glimpses of IEEE Events</h3>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                     
                     <div class="overflow-hidden rounded-2xl card"><img src="DSC_2415.JPG" alt="Event photo 1" class="w-full h-full object-cover transform hover:scale-110 transition-transform duration-300"/></div>
