--- a/index.html
+++ b/index.html
@@ -221,12 +221,17 @@
 
             <div id="events" class="content-section hidden w-full max-w-7xl px-4 sm:px-6 z-10">
                 <h2 class="text-4xl font-extrabold text-center mb-10">Event Details</h2>
+                <a href="DAY 1 EVENTS_20250917_182900_0000.pdf" target="_blank" rel="noopener noreferrer">
+                        <button class="btn-secondary text-white font-bold py-3 px-8 rounded-full text-lg">
+                            Event Rules
+                        </button>
+                    </a>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 my-12 w-full">
                     <div class="card p-6 rounded-3xl">
                         <h3 class="text-3xl font-bold mb-4 border-b-2 border-purple-500 pb-2">Technical Events</h3>
                         <ul class="space-y-4 text-left">
-                            <li class="flex items-center space-x-3"><i class="fas fa-laptop-code text-purple-400"></i><span>CODE SPRINT [HACKATHON]</span></li>
-                            <li class="flex items-center space-x-3"><i class="fas fa-robot text-purple-400"></i><span>ROBO RACE</span></li>
+                            <li class="flex items-center space-x-3"><i class="fas fa-laptop-code text-purple-400"></i><span style="color: yellow;">CODE SPRINT [HACKATHON]</span></li>style="color: red;"
+                            <li class="flex items-center space-x-3"><i class="fas fa-robot text-purple-400"></i><span>ROBO TRACE</span></li>
                             <li class="flex items-center space-x-3"><i class="fas fa-lightbulb text-purple-400"></i><span>IDEA GALLERY [IDEATHON]</span></li>
                             <li class="flex items-center space-x-3"><i class="fas fa-image text-purple-400"></i><span>VISUAL PITCH [POSTER DESIGN]</span></li>
                             <li class="flex items-center space-x-3"><i class="fas fa-brain text-purple-400"></i><span>BRAIN BYTES [TECH QUIZ]</span></li>
