--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <div class="card p-6 rounded-3xl">
                         <h3 class="text-3xl font-bold mb-4 border-b-2 border-purple-500 pb-2">Technical Events</h3>
                         <ul class="space-y-4 text-left">
-                            <li class="flex items-center space-x-3"><i class="fas fa-laptop-code text-purple-400"></i><span style="color: yellow;">CODE SPRINT [HACKATHON]</span></li>style="color: red;"
+                            <li class="flex items-center space-x-3"><i class="fas fa-laptop-code text-purple-400"></i><span style="color: yellow;">CODE SPRINT [HACKATHON]</span></li>
                             <li class="flex items-center space-x-3"><i class="fas fa-robot text-purple-400"></i><span>ROBO TRACE</span></li>
                             <li class="flex items-center space-x-3"><i class="fas fa-lightbulb text-purple-400"></i><span>IDEA GALLERY [IDEATHON]</span></li>
                             <li class="flex items-center space-x-3"><i class="fas fa-image text-purple-400"></i><span>VISUAL PITCH [POSTER DESIGN]</span></li>
