--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <button id="explore-events-btn" class="btn-secondary text-white font-bold py-3 px-8 rounded-full text-lg">
                         Explore Events
                     </button>
-                    <a href="DAY 1 EVENTS_20250917_182900_0000.pdf" target="_blank" rel="noopener noreferrer">
+                    <a href="PRADYUT PARVA 2 RULE BOOK.pdf" target="_blank" rel="noopener noreferrer">
                         <button class="btn-secondary text-white font-bold py-3 px-8 rounded-full text-lg">
                             View Brochure
                         </button>
@@ -222,9 +222,9 @@
             <div id="events" class="content-section hidden w-full max-w-7xl px-4 sm:px-6 z-10">
                 <h2 class="text-4xl font-extrabold text-center mb-10">Event Details</h2>
                <div class="flex flex-wrap items-center justify-center gap-4 mt-8">
-                    <a href="DAY 1 EVENTS_20250917_182900_0000.pdf" target="_blank" rel="noopener noreferrer">
+                    <a href="PRADYUT PARVA 2 RULE BOOK.pdf" target="_blank" rel="noopener noreferrer">
                         <button class="btn-primary text-white font-bold py-3 px-8 rounded-full text-lg">
-                            Event Rules
+                            Event Rule Book
                         </button>
                     </a>
                </div>
@@ -269,7 +269,7 @@
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
                             <img src="1652440092957.jpeg" alt="Organizing Committee Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-purple-500"/>
-                            <h4 class="text-xl font-bold">Dr. R. ArunKumar</h4>
+                            <h4 class="text-xl font-bold">Dr. ArunKumar .R</h4>
                             <p class="text-purple-400">Chief Operating Officer <br> Sairam Institution</p>
                         </div>
                         <div class="card team-card p-6 rounded-3xl text-center">
