--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <button id="explore-events-btn" class="btn-secondary text-white font-bold py-3 px-8 rounded-full text-lg">
                         Explore Events
                     </button>
-                    <a href="PRADYUT PARVA 2 RULE BOOK.pdf" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.canva.com/design/DAGyHYTxRlw/n8T2nSdpapNiLp0iYbTWdQ/view" target="_blank" rel="noopener noreferrer">
                         <button class="btn-secondary text-white font-bold py-3 px-8 rounded-full text-lg">
                             View Brochure
                         </button>
