--- a/index.html
+++ b/index.html
@@ -189,7 +189,14 @@
     src="https://www.canva.com/design/DAGyHYTxRlw/n8T2nSdpapNiLp0iYbTWdQ/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGyHYTxRlw&#x2F;n8T2nSdpapNiLp0iYbTWdQ&#x2F;view?utm_content=DAGyHYTxRlw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">DAY 1 EVENTS</a> by Sathiya" target="_blank" rel="noopener noreferrer">
+<a href="<div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https://www.canva.com/design/DAGyHYTxRlw/n8T2nSdpapNiLp0iYbTWdQ/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGyHYTxRlw&#x2F;n8T2nSdpapNiLp0iYbTWdQ&#x2F;view?utm_content=DAGyHYTxRlw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">DAY 1 EVENTS</a> by Sathiya" target="_blank" rel="noopener">DAY 1 EVENTS</a> by Sathiya" target="_blank" rel="noopener noreferrer">
                         <button class="btn-secondary text-white font-bold py-3 px-8 rounded-full text-lg">
                             View Brochure
                         </button>
