--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <button id="explore-events-btn" class="btn-secondary text-white font-bold py-3 px-8 rounded-full text-lg">
                         Explore Events
                     </button>
-                    <a href="Rules.pdf" target="_blank" rel="noopener">
+                    <a href="Srinivas.jpg" target="_blank" rel="noopener">
                         <button class="btn-secondary text-white font-bold py-3 px-8 rounded-full text-lg">
                             View Brochure
                         </button>
@@ -222,7 +222,7 @@
             <div id="events" class="content-section hidden w-full max-w-7xl px-4 sm:px-6 z-10">
                 <h2 class="text-4xl font-extrabold text-center mb-10">Event Details</h2>
                <div class="flex flex-wrap items-center justify-center gap-4 mt-8">
-                    <a href="PRADYUT PARVA 2 RULE BOOK.pdf" target="_blank" rel="noopener noreferrer">
+                    <a href="Rules.pdf" target="_blank" rel="noopener noreferrer">
                         <button class="btn-primary text-white font-bold py-3 px-8 rounded-full text-lg">
                             Event Rule Book
                         </button>
