--- a/index.html
+++ b/index.html
@@ -369,6 +369,12 @@
                                      <span>Ieee.ssce</span>
                                  </a>
                              </div>
+                             <p class="mb-2">
+                                <i class="fas fa-envelope mr-2 text-purple-400"></i>
+                                <a href="mailto:ieee.ssce@gmail.com" class="text-purple-400 hover:text-purple-300 transition-colors duration-300 underline">
+                                    ieee.ssce@gmail.com
+                                </a>
+                            </p>
                          </div>
                          <div>
                              <h3 class="text-2xl font-bold mb-4">Faculty Coordinators</h3>
